--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             woa1 = document.getElementById("woa1").value;
             woa2 = document.getElementById("woa2").value;
             woa3 = document.getElementById("woa3").value;
-            woaPEText = ((woa2-woa3)/woa2)*(woa1*);
+            woaPEText = ((woa2-woa3)/woa2)*(woa1);
             woaPRText = woa1-woaPEText;
             document.getElementById("woaProEaten").innerHTML = woaPEText
             document.getElementById("woaProRemain").innerHTML = woaPRText
