--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             wa3 = document.getElementById("wa3").value;
             wa4 = document.getElementById("wa4").value;
             addWeight = (wa2/wa3);
-            waPEText = (wa2/wa3)*(wa3-wa4)/wa2;
+            waPEText = (wa2/wa3)*((wa3-wa4)/wa2)*wa1;
             waPRText = wa1-waPEText;
             document.getElementById("waProEaten").innerHTML = waPEText
             document.getElementById("waProRemain").innerHTML = waPRText
