--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
         <p>Protein Eaten in grams = <a id="waProEaten"></a></p>
         <p>Protein Remaining from Meal in grams = <a id="waProRemain"></a></p>
     </div>-->
-    <!--<button type="button" class="collapsible">Protein Remaining from Leftovers</button>-->
-    <h1>Protein Remaining from Leftovers</h1>
+    <button type="button" class="collapsible">Protein Remaining from Leftovers</button>
     <div class="content">        
         <p>Protein Goal from Meal in grams
         <input id="woa1" type="number" style="width: fit-content(5em)"></p>
