--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         
     </div>-->
     <script>
-        function calcPRAIMwA () {
+        /*function calcPRAIMwA () {
             var wa1, wa2, wa3, wa4, addWeight, waPEText, waPRText;
             wa1 = document.getElementById("wa1").value;
             wa2 = document.getElementById("wa2").value;
@@ -84,7 +84,7 @@
             waPRText = waPEText-wa1;
             document.getElementById("waProEaten").innerHTML = waPEText
             document.getElementById("waProRemain").innerHTML = waPRText
-        }
+        }*/
         function calcPRAIMwoA () {
             var woa1, woa2, woa3, woaPEText, woaPRText;
             woa1 = document.getElementById("woa1").value;
@@ -95,14 +95,14 @@
             document.getElementById("woaProEaten").innerHTML = woaPEText
             document.getElementById("woaProRemain").innerHTML = woaPRText
         }
-        function calcPFR () {
+        /*function calcPFR () {
             var pgr1, pgr2, pgr3, pgrText;
             pgr1 = document.getElementById("pgr1").value;
             pgr2 = document.getElementById("pgr2").value;
             pgr3 = document.getElementById("pgr3").value;
             pgrText = (pgr1/pgr2)*pgr3;
             document.getElementById("pgrWN").innerHTML = pgrText;
-        }
+        }*/
         var coll = document.getElementsByClassName("collapsible");
         var i;
 
