--- a/index.html
+++ b/index.html
@@ -91,24 +91,22 @@
           localStorage.setItem(today, JSON.stringify(proteinIntake));
           }
         function displayProteinByDay() {
-          // Get the protein intake data from localStorage
-          const proteinData = Object.entries(localStorage)
-          .map(([date, protein]) => ({ date, protein: JSON.parse(protein) }));
-
-          // Get the element where the protein data will be displayed
+        // Get the element where the protein data will be displayed
           const proteinList = document.getElementById("protein-list");
 
-          // Clear the existing protein data
+        // Clear the existing protein data
           proteinList.innerHTML = "";
 
-          // Add the protein data to the list
-          proteinData.forEach(({ date, protein }) => {
+        // Loop over the dates in localStorage and add the protein data to the list
+          for (let i = 0; i < localStorage.length; i++) {
+            const date = localStorage.key(i);
+            const protein = JSON.parse(localStorage.getItem(date));
+
             const listItem = document.createElement("li");
             listItem.innerHTML = `${date}: ${protein} grams`;
             proteinList.appendChild(listItem);
-          });
           }
-
+        }
         /*function calcPRAIMwA () {
             var wa1, wa2, wa3, wa4, addWeight, waPEText, waPRText;
             wa1 = document.getElementById("wa1").value;
@@ -130,8 +128,10 @@
             woaPRText = woa1-woaPEText;
             document.getElementById("woaProEaten").innerHTML = woaPEText
             document.getElementById("woaProRemain").innerHTML = woaPRText
-            // Store the protein intake for the current day
-            trackProteinByDay();
+            // Save the protein intake data to localStorage
+            const today = new Date().toISOString().substr(0, 10);
+            const proteinData = JSON.stringify(woaPEText);
+            localStorage.setItem(today, proteinData);
         }
         /*function calcPFR () {
             var pgr1, pgr2, pgr3, pgrText;
