--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           const proteinList = document.getElementById("protein-list");
 
         // Clear the existing protein data
-          proteinList.innerHTML = "";
+          //proteinList.innerHTML = "";
 
         // Loop over the dates in localStorage and add the protein data to the list
           for (let i = 0; i < localStorage.length; i++) {
