--- a/index.html
+++ b/index.html
@@ -108,51 +108,51 @@
           }
         }*/
         function displayProteinByDay() {
-  // Get input values
-  var date = document.getElementById("dateInput").value;
-  var proteinIntake = document.getElementById("proteinInput").value;
+        // Get input values
+          var date = document.getElementById("dateInput").value;
+          var proteinIntake = document.getElementById("proteinInput").value;
   
-  // Create new row in the table
-  var table = document.getElementById("proteinTable");
-  var row = table.insertRow(-1);
-  var dateCell = row.insertCell(0);
-  var proteinCell = row.insertCell(1);
+        // Create new row in the table
+          var table = document.getElementById("proteinTable");
+          var row = table.insertRow(-1);
+          var dateCell = row.insertCell(0);
+          var proteinCell = row.insertCell(1);
   
-  // Add data to the new row
-  dateCell.innerHTML = date;
-  proteinCell.innerHTML = proteinIntake;
+        // Add data to the new row
+          dateCell.innerHTML = date;
+          proteinCell.innerHTML = proteinIntake;
   
-  // Clear input fields
-  document.getElementById("dateInput").value = "";
-  document.getElementById("proteinInput").value = "";
+        // Clear input fields
+          //document.getElementById("dateInput").value = "";
+          //document.getElementById("proteinInput").value = "";
   
-  // Save data to a cookie
-  var cookieValue = getCookie("proteinIntakeData");
-  var newData = date + ":" + proteinIntake;
-  if (cookieValue) {
-    cookieValue += "|" + newData;
-  } else {
-    cookieValue = newData;
-  }
-  setCookie("proteinIntakeData", cookieValue, 2);
-}
+        // Save data to a cookie
+          var cookieValue = getCookie("proteinIntakeData");
+          var newData = date + ":" + proteinIntake;
+          if (cookieValue) {
+            cookieValue += "|" + newData;
+          } else {
+            cookieValue = newData;
+            }
+            setCookie("proteinIntakeData", cookieValue, 2);
+            }
         function loadProteinDataFromCookie() {
-  var cookieValue = getCookie("proteinIntakeData");
-  if (cookieValue) {
-    var data = cookieValue.split("|");
-    for (var i = 0; i < data.length; i++) {
-      var row = data[i].split(":");
-      var date = row[0];
-      var proteinIntake = row[1];
-      var table = document.getElementById("proteinTable");
-      var newRow = table.insertRow(-1);
-      var dateCell = newRow.insertCell(0);
-      var proteinCell = newRow.insertCell(1);
-      dateCell.innerHTML = date;
-      proteinCell.innerHTML = proteinIntake;
+          var cookieValue = getCookie("proteinIntakeData");
+          if (cookieValue) {
+          var data = cookieValue.split("|");
+          for (var i = 0; i < data.length; i++) {
+            var row = data[i].split(":");
+            var date = row[0];
+            var proteinIntake = row[1];
+            var table = document.getElementById("proteinTable");
+            var newRow = table.insertRow(-1);
+            var dateCell = newRow.insertCell(0);
+            var proteinCell = newRow.insertCell(1);
+            dateCell.innerHTML = date;
+            proteinCell.innerHTML = proteinIntake;
+            }
+        }
     }
-  }
-}
         /*function calcPRAIMwA () {
             var wa1, wa2, wa3, wa4, addWeight, waPEText, waPRText;
             wa1 = document.getElementById("wa1").value;
